ADD(place): to favorite and delete
