# docs/openapi.yaml
@@ -1101,3 +1101,78 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ValidationError"
+
+
+  /places/{place}/store-favorite:
+    post:
+      tags: [ "Merk · Places" ]
+      summary: Add place to favorites
+      description: |
+        Добавляет помещение в избранное текущего авторизованного пользователя.
+
+        Логика:
+        - используется auth user
+        - создаётся запись в `favorite_places` с парой `user_id + place_id`
+        - если запись уже существует, дубликат не создаётся
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: place
+          required: true
+          schema:
+            type: integer
+          description: ID помещения
+      responses:
+        "200":
+          description: Помещение успешно добавлено в избранное
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: "#/components/schemas/Place"
+        "401":
+          description: Неавторизованный пользователь
+
+        "404":
+          description: Помещение не найдено
+
+
+  /places/{place}/delete-favorite:
+    delete:
+      tags: [ "Merk · Places" ]
+      summary: Remove place from favorites
+      description: |
+        Удаляет помещение из избранного текущего авторизованного пользователя.
+
+        Логика:
+        - используется auth user
+        - удаляется запись из `favorite_places` по паре `user_id + place_id`
+        - если записи нет, запрос всё равно считается успешным
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: place
+          required: true
+          schema:
+            type: integer
+          description: ID помещения
+      responses:
+        "200":
+          description: Помещение успешно удалено из избранного
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: "#/components/schemas/Place"
+        "401":
+          description: Неавторизованный пользователь
+
+        "404":
+          description: Помещение не найдено
+
